distribution project built from parent pom only when 'distribution' profile is active

--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,18 @@
       <!-- 
 		<module>examples</module>
 		-->
-      <module>dist</module>
    </modules>
 
+   <!-- Only build the distribution if requested explicitly -->
+   <profiles>
+      <profile>
+         <id>distribution</id>
+         <modules>
+            <module>dist</module>
+         </modules>
+      </profile>
+   </profiles>
+   
    <developers>
       <developer>
          <name>Jordan Ganoff</name>
