--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
-      <groupId>org.jboss.seam</groupId>
-      <artifactId>seam-parent</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <groupId>org.jboss.weld</groupId>
+      <artifactId>weld-parent</artifactId>
+      <version>9</version>
    </parent>
 
    <groupId>org.jboss.seam</groupId>
@@ -15,8 +15,11 @@
    <name>Seam JMS Parent</name>
    <version>3.0.0-SNAPSHOT</version>
 
+   <url>http://sfwk.org/Seam3/JMSModule</url>
+   
    <properties>
-      <seamJmsVersion>3.0.0-SNAPSHOT</seamJmsVersion>
+      <seam.jms.version>3.0.0-SNAPSHOT</seam.jms.version>
+      <weld.api.version>1.0-SP1</weld.api.version>
    </properties>
 
    <modules>
@@ -41,15 +44,24 @@
    <developers>
       <developer>
          <name>Jordan Ganoff</name>
+         <email>jganoff@gmail.com</email>
+         <timezone>EST</timezone>
          <roles>
             <role>Project Lead</role>
          </roles>
-         <email>jganoff@gmail.com</email>
       </developer>
    </developers>
 
    <dependencyManagement>
       <dependencies>
+         <dependency>
+				<groupId>org.jboss.weld</groupId>
+				<artifactId>weld-api-bom</artifactId>
+				<version>${weld.api.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+      
          <dependency>
             <groupId>javax.jms</groupId>
             <artifactId>jms</artifactId>
@@ -66,13 +78,13 @@
          <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>seam-jms</artifactId>
-            <version>${seamJmsVersion}</version>
+            <version>${seam.jms.version}</version>
          </dependency>
 
          <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>seam-jms-impl</artifactId>
-            <version>${seamJmsVersion}</version>
+            <version>${seam.jms.version}</version>
          </dependency>
       </dependencies>
    </dependencyManagement>
