--- a/pom.xml
+++ b/pom.xml
@@ -1,97 +1,252 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-   <parent>
-      <groupId>org.jboss.weld</groupId>
-      <artifactId>weld-parent</artifactId>
-      <version>9</version>
-   </parent>
+	<parent>
+		<groupId>org.jboss.weld</groupId>
+		<artifactId>weld-parent</artifactId>
+		<version>9</version>
+	</parent>
 
-   <groupId>org.jboss.seam</groupId>
-   <artifactId>seam-jms-parent</artifactId>
-   <packaging>pom</packaging>
-   <name>Seam JMS Parent</name>
-   <version>3.0.0-SNAPSHOT</version>
+	<groupId>org.jboss.seam</groupId>
+	<artifactId>seam-jms-parent</artifactId>
+	<packaging>pom</packaging>
+	<name>Seam JMS Parent</name>
+	<version>3.0.0-SNAPSHOT</version>
 
-   <url>http://sfwk.org/Seam3/JMSModule</url>
-   
-   <properties>
-      <seam.jms.version>3.0.0-SNAPSHOT</seam.jms.version>
-      <weld.api.version>1.0-SP1</weld.api.version>
-   </properties>
+	<url>http://sfwk.org/Seam3/JMSModule</url>
 
-   <modules>
-      <module>api</module>
-      <module>impl</module>
-      <module>docs/reference</module>
-      <!-- 
+	<properties>
+		<seam.jms.version>3.0.0-SNAPSHOT</seam.jms.version>
+		<weld.api.version>1.0-SP1</weld.api.version>
+		<emma.maven.plugin.version>1.0-alpha-2</emma.maven.plugin.version>
+		<emma4it.maven.plugin.version>1.3</emma4it.maven.plugin.version>
+		<jboss.maven.plugin.version>1.4</jboss.maven.plugin.version>
+		<maven.antrun.plugin.version>1.3</maven.antrun.plugin.version>
+		<cargo.maven2.plugin.version>1.0-beta-2</cargo.maven2.plugin.version>
+	</properties>
+
+	<modules>
+		<module>api</module>
+		<module>impl</module>
+		<module>docs/reference</module>
+		<!-- 
 		<module>examples</module>
 		-->
-   </modules>
+	</modules>
 
-   <!-- Only build the distribution if requested explicitly -->
-   <profiles>
-      <profile>
-         <id>distribution</id>
-         <modules>
-            <module>dist</module>
-         </modules>
-      </profile>
-   </profiles>
-   
-   <developers>
-      <developer>
-         <name>Jordan Ganoff</name>
-         <email>jganoff@gmail.com</email>
-         <timezone>EST</timezone>
-         <roles>
-            <role>Project Lead</role>
-         </roles>
-      </developer>
-   </developers>
+	<!-- Only build the distribution if requested explicitly -->
+	<profiles>
+		<profile>
+			<id>distribution</id>
+			<modules>
+				<module>dist</module>
+			</modules>
+		</profile>
+		<profile>
+			<id>code-coverage</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>emma-maven-plugin</artifactId>
+							<version>${emma.maven.plugin.version}</version>
+							<inherited>true</inherited>
+							<executions>
+								<execution>
+									<id>instrumentation</id>
+									<phase>process-classes</phase>
+									<goals>
+										<goal>instrument</goal>
+									</goals>
+									<configuration>
+										<verbose>true</verbose>
+									</configuration>
+								</execution>
+								<execution>
+									<id>cleaning</id>
+									<phase>clean</phase>
+									<goals>
+										<goal>clean</goal>
+									</goals>
+								</execution>
+							</executions>
+						</plugin>
 
-   <dependencyManagement>
-      <dependencies>
-         <dependency>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<inherited>true</inherited>
+							<configuration>
+								<forkMode>once</forkMode>
+								<classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
+							</configuration>
+						</plugin>
+
+						<plugin>
+							<groupId>org.codehaus.cargo</groupId>
+							<artifactId>cargo-maven2-plugin</artifactId>
+							<version>${cargo.maven2.plugin.version}</version>
+							<executions>
+								<execution>
+									<id>start-container</id>
+									<phase>process-test-classes</phase>
+									<goals>
+										<goal>start</goal>
+									</goals>
+								</execution>
+								<execution>
+									<id>stop-container</id>
+									<phase>test</phase>
+									<goals>
+										<goal>stop</goal>
+									</goals>
+								</execution>
+							</executions>
+
+							<configuration>
+								<wait>false</wait>
+								<container>
+									<containerId>jboss5x</containerId>
+									<home>${env.JBOSS_HOME}</home>
+									<timeout>300000</timeout> <!-- 5 minutes -->
+								</container>
+								<configuration>
+									<type>existing</type>
+									<home>${env.JBOSS_HOME}/server/default</home>
+									<properties>
+										<cargo.jboss.configuration>default</cargo.jboss.configuration>
+										<cargo.rmi.port>1099</cargo.rmi.port>
+									</properties>
+								</configuration>
+							</configuration>
+						</plugin>
+
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-antrun-plugin</artifactId>
+							<version>${maven.antrun.plugin.version}</version>
+							<executions>
+								<execution>
+									<id>deploy-emma-jar</id>
+									<phase>process-test-sources</phase>
+									<goals>
+										<goal>run</goal>
+									</goals>
+									<configuration>
+										<tasks>
+											<echo message="Deploying emma jar to server lib directory" />
+											<copy file="${emma.jar.file}" todir="${env.JBOSS_HOME}/server/default/lib"
+												overwrite="true" />
+										</tasks>
+									</configuration>
+								</execution>
+								<execution>
+									<id>retrieve-coverage-file</id>
+									<phase>test</phase>
+									<goals>
+										<goal>run</goal>
+									</goals>
+									<configuration>
+										<tasks>
+											<echo
+												message="Moving coverage.ec file to current modele from parent module" />
+											<property name="coverage.file" value="${basedir}/../coverage.ec" />
+											<waitfor maxwait="30" maxwaitunit="second">
+												<available file="${coverage.file}" />
+											</waitfor>
+											<move file="${coverage.file}" todir="${basedir}"
+												failonerror="false" />
+											<delete file="${basedir}/transaction.log" failonerror="false" />
+										</tasks>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
+
+						<plugin>
+							<groupId>org.sonatype.maven.plugin</groupId>
+							<artifactId>emma4it-maven-plugin</artifactId>
+							<version>${emma4it.maven.plugin.version}</version>
+							<executions>
+								<execution>
+									<id>report</id>
+									<phase>test</phase>
+									<goals>
+										<goal>report</goal>
+									</goals>
+									<configuration>
+										<sourceSets>
+											<sourceSet>
+												<directory>${project.build.sourceDirectory}</directory>
+											</sourceSet>
+										</sourceSets>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
+
+	<developers>
+		<developer>
+			<name>Jordan Ganoff</name>
+			<email>jganoff@gmail.com</email>
+			<timezone>EST</timezone>
+			<roles>
+				<role>Project Lead</role>
+			</roles>
+		</developer>
+	</developers>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
 				<groupId>org.jboss.weld</groupId>
 				<artifactId>weld-api-bom</artifactId>
 				<version>${weld.api.version}</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
-      
-         <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>jms</artifactId>
-            <version>1.1</version>
-         </dependency>
 
-         <dependency>
-            <groupId>org.jboss.weld</groupId>
-            <artifactId>weld-extensions</artifactId>
-            <version>1.0.0.Alpha1</version>
-         </dependency>
+			<dependency>
+				<groupId>javax.jms</groupId>
+				<artifactId>jms</artifactId>
+				<version>1.1</version>
+			</dependency>
 
-         <!-- Modules defined again here to prevent need to explicitly specify version where used -->
-         <dependency>
-            <groupId>org.jboss.seam</groupId>
-            <artifactId>seam-jms</artifactId>
-            <version>${seam.jms.version}</version>
-         </dependency>
+			<dependency>
+				<groupId>org.jboss.weld</groupId>
+				<artifactId>weld-extensions</artifactId>
+				<version>1.0.0.Alpha1</version>
+			</dependency>
 
-         <dependency>
-            <groupId>org.jboss.seam</groupId>
-            <artifactId>seam-jms-impl</artifactId>
-            <version>${seam.jms.version}</version>
-         </dependency>
-      </dependencies>
-   </dependencyManagement>
+			<!--
+				Modules defined again here to prevent need to explicitly specify
+				version where used
+			-->
+			<dependency>
+				<groupId>org.jboss.seam</groupId>
+				<artifactId>seam-jms</artifactId>
+				<version>${seam.jms.version}</version>
+			</dependency>
 
-   <scm>
-      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/jms/trunk</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/jms/trunk</developerConnection>
-      <url>http://fisheye.jboss.org/browse/Seam/modules/jms/trunk</url>
-   </scm>
+			<dependency>
+				<groupId>org.jboss.seam</groupId>
+				<artifactId>seam-jms-impl</artifactId>
+				<version>${seam.jms.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<scm>
+		<connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/jms/trunk</connection>
+		<developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/jms/trunk</developerConnection>
+		<url>http://fisheye.jboss.org/browse/Seam/modules/jms/trunk</url>
+	</scm>
 </project>
