Added slf4j dependency directly.  Transitive dep was not being pulled in with mvn 2.0.10.

--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,12 @@
 				<artifactId>seam-jms-impl</artifactId>
 				<version>${seam.jms.version}</version>
 			</dependency>
+   
+         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.5.10</version>
+         </dependency>
 		</dependencies>
 	</dependencyManagement>
 
