--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -62,6 +62,11 @@
 			<version>${arquillian.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+      </dependency>
 	</dependencies>
 
 	<profiles>
