--- a/docs/reference/pom.xml
+++ b/docs/reference/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jboss.seam</groupId>
 		<artifactId>seam-jms-parent</artifactId>
-		<version>3.0.0.Alpha1</version>
+		<version>3.0.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
