--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<url>http://sfwk.org/Seam3/JMSModule</url>
 
 	<properties>
-		<seam.jms.version>3.0.0.Alpha1</seam.jms.version>
+		<seam.jms.version>3.0.0-SNAPSHOT</seam.jms.version>
 		<weld.api.version>1.0-SP1</weld.api.version>
 		<emma.maven.plugin.version>1.0-alpha-2</emma.maven.plugin.version>
 		<emma4it.maven.plugin.version>1.3</emma4it.maven.plugin.version>
