--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,15 +3,16 @@
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
-      <groupId>org.jboss.seam</groupId>
+      <groupId>org.jboss.seam.jms</groupId>
       <artifactId>seam-jms-parent</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>seam-jms</artifactId>
+   <artifactId>seam-jms-api</artifactId>
    <name>Seam JMS API</name>
    <description>Client View of the Seam JMS Module</description>
+   <packaging>jar</packaging>
 
    <dependencies>
       <dependency>
@@ -27,4 +28,28 @@
          <scope>provided</scope>
       </dependency>
    </dependencies>
+   
+   <profiles>
+      <profile>
+         <id>distribution</id>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-javadoc-plugin</artifactId>
+                  <version>2.7</version>
+                  <executions>
+                     <execution>
+                        <id>javadoc-api</id>
+                        <phase>package</phase>
+                        <goals>
+                           <goal>javadoc</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+   </profiles>   
 </project>
