--- a/docs/reference/pom.xml
+++ b/docs/reference/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.jboss.seam</groupId>
+		<groupId>org.jboss.seam.jms</groupId>
 		<artifactId>seam-jms-parent</artifactId>
 		<version>3.0.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
