--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,27 @@
 	<!-- Only build the distribution if requested explicitly -->
 	<profiles>
 		<profile>
-			<id>distribution</id>
+			<id>dist</id>
+         <activation>
+            <property>
+               <name>release</name>
+            </property>
+         </activation>
 			<modules>
-            <module>docs/reference</module>
 				<module>dist</module>
 			</modules>
 		</profile>
+      <profile>
+         <id>docs</id>
+         <activation>
+            <property>
+               <name>release</name>
+            </property>
+         </activation>
+         <modules>
+            <module>docs/reference</module>
+         </modules>
+      </profile>
 		<profile>
 			<id>code-coverage</id>
 			<build>
