--- a/docs/reference/pom.xml
+++ b/docs/reference/pom.xml
@@ -87,6 +87,13 @@
 					</options>
 				</configuration>
 			</plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <configuration>
+               <skip>true</skip>
+            </configuration>
+         </plugin>
 		</plugins>
 	</build>
 </project>
