--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -13,6 +13,24 @@
 	<name>Seam JMS Implementation</name>
 	<description>Implementation of the Seam JMS Module</description>
    <packaging>jar</packaging>
+   
+   <!-- TODO Remove -->
+   <!-- Snapshots repo to get parent -->
+   <repositories>
+      <repository>
+         <id>oss.sonatype.org/jboss-snapshots</id>
+         <name>JBoss (Nexus) Snapshots Repository</name>
+         <url>http://oss.sonatype.org/content/repositories/jboss-snapshots
+         </url>
+         <releases>
+            <enabled>false</enabled>
+         </releases>
+         <snapshots>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+         </snapshots>
+      </repository>
+   </repositories>
 
 	<dependencies>
 		<dependency>
