--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jboss.weld</groupId>
 		<artifactId>weld-parent</artifactId>
-		<version>10</version>
+		<version>11-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jboss.seam.jms</groupId>
@@ -15,6 +15,24 @@
 	<version>3.0.0-SNAPSHOT</version>
 
 	<url>http://sfwk.org/Seam3/JMSModule</url>
+   
+   <!-- TODO Remove -->
+   <!-- Snapshots repo to get parent -->
+   <repositories>
+      <repository>
+         <id>oss.sonatype.org/jboss-snapshots</id>
+         <name>JBoss (Nexus) Snapshots Repository</name>
+         <url>http://oss.sonatype.org/content/repositories/jboss-snapshots
+         </url>
+         <releases>
+            <enabled>false</enabled>
+         </releases>
+         <snapshots>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+         </snapshots>
+      </repository>
+   </repositories>
 
 	<properties>
 		<weld.api.version>1.0-SP1</weld.api.version>
@@ -36,27 +54,17 @@
 	<!-- Only build the distribution if requested explicitly -->
 	<profiles>
 		<profile>
-			<id>dist</id>
+			<id>distribution</id>
          <activation>
             <property>
-               <name>release</name>
+               <name>dist</name>
             </property>
          </activation>
 			<modules>
 				<module>dist</module>
+            <module>docs/reference</module>
 			</modules>
 		</profile>
-      <profile>
-         <id>docs</id>
-         <activation>
-            <property>
-               <name>release</name>
-            </property>
-         </activation>
-         <modules>
-            <module>docs/reference</module>
-         </modules>
-      </profile>
 		<profile>
 			<id>code-coverage</id>
 			<build>
