--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+   <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.jboss.weld</groupId>
-		<artifactId>weld-parent</artifactId>
-		<version>11-SNAPSHOT</version>
-	</parent>
+   <parent>
+      <groupId>org.jboss.seam</groupId>
+      <artifactId>seam-parent</artifactId>
+      <version>1</version>
+   </parent>
 
-	<groupId>org.jboss.seam.jms</groupId>
-	<artifactId>seam-jms-parent</artifactId>
-	<packaging>pom</packaging>
-	<name>Seam JMS Parent</name>
-	<version>3.0.0-SNAPSHOT</version>
+   <groupId>org.jboss.seam.jms</groupId>
+   <artifactId>seam-jms-parent</artifactId>
+   <packaging>pom</packaging>
+   <name>Seam JMS Parent</name>
+   <version>3.0.0-SNAPSHOT</version>
 
-	<url>http://sfwk.org/Seam3/JMSModule</url>
-   
+   <url>http://sfwk.org/Seam3/JMSModule</url>
+
    <!-- TODO Remove -->
    <!-- Snapshots repo to get parent -->
    <repositories>
@@ -34,136 +35,165 @@
       </repository>
    </repositories>
 
-	<properties>
-		<weld.api.version>1.0-SP1</weld.api.version>
-		<emma.maven.plugin.version>1.0-alpha-2</emma.maven.plugin.version>
-		<emma4it.maven.plugin.version>1.3</emma4it.maven.plugin.version>
-		<jboss.maven.plugin.version>1.4</jboss.maven.plugin.version>
-		<cargo.maven2.plugin.version>1.0-beta-2</cargo.maven2.plugin.version>
-		<arquillian.version>1.0.0.Alpha1</arquillian.version>
-	</properties>
+   <properties>
+      <seam.version>3.0.0.b01</seam.version>
+   </properties>
 
-	<modules>
-		<module>api</module>
-		<module>impl</module>
-		<!-- 
-		<module>examples</module>
-		-->
-	</modules>
+   <modules>
+      <module>api</module>
+      <module>impl</module>
+   </modules>
 
-	<!-- Only build the distribution if requested explicitly -->
-	<profiles>
-		<profile>
-			<id>distribution</id>
+
+   <dependencyManagement>
+      <dependencies>
+      
+         <dependency>
+            <groupId>org.jboss.seam</groupId>
+            <artifactId>seam</artifactId>
+            <version>${seam.version}</version>
+            <scope>import</scope>
+            <type>pom</type>
+         </dependency>
+         
+         <!-- Override the dependencyManagement of org.jboss.seam:seam for modules from this project -->
+         <dependency>
+            <groupId>org.jboss.seam.jms</groupId>
+            <artifactId>seam-jms</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         
+         <dependency>
+            <groupId>org.jboss.seam.jms</groupId>
+            <artifactId>seam-jms-api</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         
+      </dependencies>
+   </dependencyManagement>
+
+   <!-- Only build the distribution if requested explicitly -->
+   <profiles>
+      <profile>
+         <id>distribution</id>
          <activation>
             <property>
                <name>dist</name>
             </property>
          </activation>
-			<modules>
-				<module>dist</module>
+         <modules>
+            <module>dist</module>
             <module>docs/reference</module>
-			</modules>
-		</profile>
-		<profile>
-			<id>code-coverage</id>
-			<build>
-				<pluginManagement>
-					<plugins>
+         </modules>
+      </profile>
+      <profile>
+         <id>code-coverage</id>
+         <build>
+            <pluginManagement>
+               <plugins>
 
-						<plugin>
-							<groupId>org.codehaus.cargo</groupId>
-							<artifactId>cargo-maven2-plugin</artifactId>
-							<version>${cargo.maven2.plugin.version}</version>
-							<executions>
-								<execution>
-									<id>start-container</id>
-									<phase>process-test-classes</phase>
-									<goals>
-										<goal>start</goal>
-									</goals>
-								</execution>
-								<execution>
-									<id>stop-container</id>
-									<phase>test</phase>
-									<goals>
-										<goal>stop</goal>
-									</goals>
-								</execution>
-							</executions>
+                  <plugin>
+                     <groupId>org.codehaus.cargo</groupId>
+                     <artifactId>cargo-maven2-plugin</artifactId>
+                     <version>${cargo.maven2.plugin.version}</version>
+                     <executions>
+                        <execution>
+                           <id>start-container</id>
+                           <phase>process-test-classes</phase>
+                           <goals>
+                              <goal>start</goal>
+                           </goals>
+                        </execution>
+                        <execution>
+                           <id>stop-container</id>
+                           <phase>test</phase>
+                           <goals>
+                              <goal>stop</goal>
+                           </goals>
+                        </execution>
+                     </executions>
 
-							<configuration>
-								<wait>false</wait>
-								<container>
-									<containerId>jboss5x</containerId>
-									<home>${env.JBOSS_HOME}</home>
-									<timeout>300000</timeout> <!-- 5 minutes -->
-								</container>
-								<configuration>
-									<type>existing</type>
-									<home>${env.JBOSS_HOME}/server/default</home>
-									<properties>
-										<cargo.jboss.configuration>default</cargo.jboss.configuration>
-										<cargo.rmi.port>1099</cargo.rmi.port>
-									</properties>
-								</configuration>
-							</configuration>
-						</plugin>
+                     <configuration>
+                        <wait>false</wait>
+                        <container>
+                           <containerId>jboss5x</containerId>
+                           <home>${env.JBOSS_HOME}</home>
+                           <timeout>300000</timeout> <!-- 5 minutes -->
+                        </container>
+                        <configuration>
+                           <type>existing</type>
+                           <home>${env.JBOSS_HOME}/server/default</home>
+                           <properties>
+                              <cargo.jboss.configuration>default
+                              </cargo.jboss.configuration>
+                              <cargo.rmi.port>1099</cargo.rmi.port>
+                           </properties>
+                        </configuration>
+                     </configuration>
+                  </plugin>
 
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-antrun-plugin</artifactId>
-							<executions>
-								<execution>
-									<id>deploy-emma-jar</id>
-									<phase>process-test-sources</phase>
-									<goals>
-										<goal>run</goal>
-									</goals>
-									<configuration>
-										<tasks>
-											<echo message="Deploying emma jar to server lib directory" />
-											<copy file="${emma.jar.file}" todir="${env.JBOSS_HOME}/server/default/lib" overwrite="true" />
-										</tasks>
-									</configuration>
-								</execution>
-								<execution>
-									<id>retrieve-coverage-file</id>
-									<phase>test</phase>
-									<goals>
-										<goal>run</goal>
-									</goals>
-									<configuration>
-										<tasks>
-											<echo message="Moving coverage.ec file to current modele from parent module" />
-											<property name="coverage.file" value="${basedir}/../coverage.ec" />
-											<waitfor maxwait="30" maxwaitunit="second">
-												<available file="${coverage.file}" />
-											</waitfor>
-											<move file="${coverage.file}" todir="${basedir}" failonerror="false" />
-											<delete file="${basedir}/transaction.log" failonerror="false" />
-										</tasks>
-									</configuration>
-								</execution>
-							</executions>
-						</plugin>
+                  <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-antrun-plugin</artifactId>
+                     <executions>
+                        <execution>
+                           <id>deploy-emma-jar</id>
+                           <phase>process-test-sources</phase>
+                           <goals>
+                              <goal>run</goal>
+                           </goals>
+                           <configuration>
+                              <tasks>
+                                 <echo
+                                    message="Deploying emma jar to server lib directory" />
+                                 <copy file="${emma.jar.file}"
+                                    todir="${env.JBOSS_HOME}/server/default/lib"
+                                    overwrite="true" />
+                              </tasks>
+                           </configuration>
+                        </execution>
+                        <execution>
+                           <id>retrieve-coverage-file</id>
+                           <phase>test</phase>
+                           <goals>
+                              <goal>run</goal>
+                           </goals>
+                           <configuration>
+                              <tasks>
+                                 <echo
+                                    message="Moving coverage.ec file to current modele from parent module" />
+                                 <property name="coverage.file"
+                                    value="${basedir}/../coverage.ec" />
+                                 <waitfor maxwait="30"
+                                    maxwaitunit="second">
+                                    <available file="${coverage.file}" />
+                                 </waitfor>
+                                 <move file="${coverage.file}"
+                                    todir="${basedir}" failonerror="false" />
+                                 <delete file="${basedir}/transaction.log"
+                                    failonerror="false" />
+                              </tasks>
+                           </configuration>
+                        </execution>
+                     </executions>
+                  </plugin>
 
-					</plugins>
-				</pluginManagement>
-			</build>
-		</profile>
-	</profiles>
+               </plugins>
+            </pluginManagement>
+         </build>
+      </profile>
+   </profiles>
 
-	<developers>
-		<developer>
-			<name>Jordan Ganoff</name>
-			<email>jganoff@gmail.com</email>
-			<timezone>EST</timezone>
-			<roles>
-				<role>Project Lead</role>
-			</roles>
+   <developers>
+      <developer>
+         <name>Jordan Ganoff</name>
+         <email>jganoff@gmail.com</email>
+         <timezone>EST</timezone>
+         <roles>
+            <role>Project Lead</role>
+         </roles>
          <url>http://community.jboss.org/people/jganoff</url>
-		</developer>
+      </developer>
       <developer>
          <name>Dan Allen</name>
          <organization>JBoss, by Red Hat</organization>
@@ -174,41 +204,13 @@
             <role>Contributor</role>
          </roles>
       </developer>
-	</developers>
+   </developers>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.jboss.weld</groupId>
-				<artifactId>weld-api-bom</artifactId>
-				<version>${weld.api.version}</version>
-				<scope>import</scope>
-				<type>pom</type>
-			</dependency>
-
-			<dependency>
-				<groupId>javax.jms</groupId>
-				<artifactId>jms</artifactId>
-				<version>1.1</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.jboss.weld</groupId>
-				<artifactId>weld-extensions</artifactId>
-				<version>1.0.0.Alpha1</version>
-			</dependency>
-
-         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.5.10</version>
-         </dependency>
-		</dependencies>
-	</dependencyManagement>
-
-	<scm>
-		<connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/jms/trunk</connection>
-		<developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/jms/trunk</developerConnection>
-		<url>http://fisheye.jboss.org/browse/Seam/modules/jms/trunk</url>
-	</scm>
+   <scm>
+      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/jms/trunk
+      </connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/jms/trunk
+      </developerConnection>
+      <url>http://fisheye.jboss.org/browse/Seam/modules/jms/trunk</url>
+   </scm>
 </project>
