--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,11 @@
             <pluginManagement>
                <plugins>
 
+                  <!-- Specify this locally. Arquillian will support this properly soon -->
                   <plugin>
                      <groupId>org.codehaus.cargo</groupId>
                      <artifactId>cargo-maven2-plugin</artifactId>
+                     <version>1.0-beta-2</version>
                      <executions>
                         <execution>
                            <id>start-container</id>
