Updated Arquillian to 1.0.0-Alpha3.  Added jbossas-remote-6 and jbossas-managed-6 profiles, updated for JBoss AS 6 M4 with HornetQ.  Started work on SEAMJMS-1.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
    <properties>
       <seam.version>3.0.0.b01</seam.version>
+      <arquillian.version>1.0.0.Alpha3</arquillian.version>
    </properties>
 
    <modules>
