--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,6 +24,7 @@
       <dependency>
          <groupId>javax.jms</groupId>
          <artifactId>jms</artifactId>
+         <version>1.1</version>
          <scope>provided</scope>
       </dependency>
    </dependencies>
