--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -10,14 +10,13 @@
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>seam-jms</artifactId>
-   <name>Seam JMS Implementation</name>
-   <description>Implementation of the Seam JMS Module</description>
+   <artifactId>seam-jms-impl</artifactId>
    <packaging>jar</packaging>
 
-   <properties>
-      <jbossas.version>6.0.0.20100721-M4</jbossas.version>
-   </properties>
+   <name>Seam JMS Implementation</name>
+   <description>Implementation of the Seam JMS Module</description>
+   <!-- url required for JAR Manifest -->
+   <url>${project.parent.url}</url>
 
    <dependencies>
       <dependency>
@@ -27,27 +26,24 @@
       </dependency>
 
       <dependency>
+         <groupId>org.jboss.spec.javax.jms</groupId>
+         <artifactId>jboss-jms-api_1.1_spec</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
          <groupId>org.jboss.seam.jms</groupId>
          <artifactId>seam-jms-api</artifactId>
-         <version>${project.version}</version>
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.weld</groupId>
-         <artifactId>weld-extensions</artifactId>
-         <scope>runtime</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>javax.jms</groupId>
-         <artifactId>jms</artifactId>
-         <scope>provided</scope>
+         <groupId>org.jboss.seam.solder</groupId>
+         <artifactId>seam-solder-api</artifactId>
       </dependency>
 
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
-         <scope>test</scope>
       </dependency>
 
       <dependency>
@@ -58,7 +54,6 @@
       <dependency>
          <groupId>org.jboss.arquillian</groupId>
          <artifactId>arquillian-junit</artifactId>
-         <scope>test</scope>
       </dependency>
    </dependencies>
 
@@ -92,12 +87,10 @@
             <dependency>
                <groupId>org.jboss.arquillian.container</groupId>
                <artifactId>arquillian-jbossas-remote-6</artifactId>
-               <version>${arquillian.version}</version>
             </dependency>
             <dependency>
                <groupId>org.jboss.jbossas</groupId>
                <artifactId>jboss-as-client</artifactId>
-               <version>${jbossas.version}</version>
                <type>pom</type>
             </dependency>
         </dependencies>
@@ -122,17 +115,14 @@
             <dependency>
                <groupId>org.jboss.arquillian.container</groupId>
                <artifactId>arquillian-jbossas-managed-6</artifactId>
-               <version>${arquillian.version}</version>
             </dependency>
             <dependency>
                <groupId>org.jboss.jbossas</groupId>
                <artifactId>jboss-server-manager</artifactId>
-               <version>1.0.3.GA</version>
             </dependency>
             <dependency>
                <groupId>org.jboss.jbossas</groupId>
                <artifactId>jboss-as-client</artifactId>
-               <version>${jbossas.version}</version>
                <type>pom</type>
             </dependency>
          </dependencies>
