--- a/pom.xml
+++ b/pom.xml
@@ -6,20 +6,19 @@
    <parent>
       <groupId>org.jboss.seam</groupId>
       <artifactId>seam-parent</artifactId>
-      <version>3</version>
+      <version>6</version>
    </parent>
 
    <groupId>org.jboss.seam.jms</groupId>
    <artifactId>seam-jms-parent</artifactId>
    <packaging>pom</packaging>
-   <name>Seam JMS Parent</name>
    <version>3.0.0-SNAPSHOT</version>
 
-   <url>http://sfwk.org/Seam3/JMSModule</url>
+   <name>Seam JMS Module</name>
+   <url>http://sfwk.org/Seam3/JMS</url>
 
    <properties>
-      <seam.version>3.0.0.b01</seam.version>
-      <arquillian.version>1.0.0.Alpha3</arquillian.version>
+      <seam.version>3.0.0.b05</seam.version>
    </properties>
 
    <modules>
@@ -27,17 +26,11 @@
       <module>impl</module>
    </modules>
    
-   <prerequisites>
-      <maven>3.0</maven>
-   </prerequisites>
-
-
    <dependencyManagement>
       <dependencies>
-      
          <dependency>
             <groupId>org.jboss.seam</groupId>
-            <artifactId>seam</artifactId>
+            <artifactId>seam-bom</artifactId>
             <version>${seam.version}</version>
             <scope>import</scope>
             <type>pom</type>
@@ -46,16 +39,15 @@
          <!-- Override the dependencyManagement of org.jboss.seam:seam for modules from this project -->
          <dependency>
             <groupId>org.jboss.seam.jms</groupId>
-            <artifactId>seam-jms</artifactId>
-            <version>${project.version}</version>
-         </dependency>
-         
-         <dependency>
-            <groupId>org.jboss.seam.jms</groupId>
             <artifactId>seam-jms-api</artifactId>
             <version>${project.version}</version>
          </dependency>
-         
+
+         <dependency>
+            <groupId>org.jboss.seam.jms</groupId>
+            <artifactId>seam-jms-impl</artifactId>
+            <version>${project.version}</version>
+         </dependency>
       </dependencies>
    </dependencyManagement>
 
@@ -159,6 +151,22 @@
       </profile>
    </profiles>
 
+   <issueManagement>
+      <system>JIRA</system>
+      <url>http://issues.jboss.org/browse/SEAMJMS</url>
+   </issueManagement>
+
+   <ciManagement>
+      <system>Hudson</system>
+      <url>http://hudson.jboss.org/hudson/view/Seam/job/Seam-3.X-jms-CI</url>
+   </ciManagement>
+
+   <scm>
+      <connection>scm:git:git://github.com/seam/jms.git</connection>
+      <developerConnection>scm:git:git@github.com:seam/jms.git</developerConnection>
+      <url>http://github.com/seam/jms</url>
+   </scm>
+
    <developers>
       <developer>
          <name>Jordan Ganoff</name>
@@ -180,12 +188,4 @@
          </roles>
       </developer>
    </developers>
-
-   <scm>
-      <connection>scm:git:git://github.com/seam/jms.git
-      </connection>
-      <developerConnection>scm:git:git@github.com:seam/jms.git
-      </developerConnection>
-      <url>http://github.com/seam/jms</url>
-   </scm>
 </project>
