Fixed final name and removed extra sections of the pom file.

--- a/examples/seam-jms-example-rest/pom.xml
+++ b/examples/seam-jms-example-rest/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>seam-jms-rest-publishing</artifactId>
     <packaging>war</packaging>
     <version>3.0.0-SNAPSHOT</version>
-    <name>Seam JMS Rest PUblishing Example</name>
+    <name>Seam JMS Rest Publishing Example</name>
     <repositories>
         <repository>
             <id>java.net2</id>
@@ -66,44 +66,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>JMSManagingApp</finalName>
+        <finalName>seam-jms-rest-publishing</finalName>
     </build>
-    <profiles>
-        <profile>
-            <id>endorsed</id>
-            <activation>
-                <property>
-                    <name>sun.boot.class.path</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>2.0.2</version>
-                        <configuration>
-                            <!-- javaee6 contains upgrades of APIs contained within the JDK itself.
-                                 As such these need to be placed on the bootclasspath, rather than classpath of the
-                                 compiler.
-                                 If you don't make use of these new updated API, you can delete the profile.
-                                 On non-SUN jdk, you will need to create a similar profile for your jdk, with the similar property as sun.boot.class.path in Sun's JDK.-->
-                            <compilerArguments>
-                                <bootclasspath>${settings.localRepository}/javax/javaee-endorsed-api/6.0/javaee-endorsed-api-6.0.jar${path.separator}${sun.boot.class.path}</bootclasspath>
-                            </compilerArguments>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>javax</groupId>
-                                <artifactId>javaee-endorsed-api</artifactId>
-                                <version>6.0</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
-
