--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -125,6 +125,7 @@
 				<dependency>
 					<groupId>org.jboss.arquillian.container</groupId>
 					<artifactId>arquillian-jbossas-managed-6</artifactId>
+					<version>1.0.0.Alpha4</version>
 				</dependency>
 				<dependency>
 					<groupId>org.jboss.jbossas</groupId>
