--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -39,6 +39,7 @@
 		<dependency>
 			<groupId>org.jboss.seam.solder</groupId>
 			<artifactId>seam-solder</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
