Changed jbossas-managed-6 to be the default profile when running mvn clean install

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -113,6 +113,9 @@
 		</profile>
 		<profile>
 			<id>jbossas-managed-6</id>
+                        <activation>
+                            <activeByDefault>true</activeByDefault>
+                        </activation>
 			<properties>
 				<bindAddress>localhost</bindAddress>
 				<httpPort>8080</httpPort>
