--- a/examples/seam-jms-example-rest/pom.xml
+++ b/examples/seam-jms-example-rest/pom.xml
@@ -1,11 +1,10 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.seam.jms.examples</groupId>
     <artifactId>seam-jms-rest-publishing</artifactId>
     <packaging>war</packaging>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0.Beta1</version>
     <name>Seam JMS Rest Publishing Example</name>
     <repositories>
         <repository>
@@ -37,7 +36,7 @@
         <dependency>
             <groupId>org.jboss.seam.jms</groupId>
             <artifactId>seam-jms-impl</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>3.0.0.Beta1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>slf4j-api</artifactId>
