--- a/examples/seam-jms-example-rest/pom.xml
+++ b/examples/seam-jms-example-rest/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.jboss.seam.jms.examples</groupId>
     <artifactId>seam-jms-rest-publishing</artifactId>
     <packaging>war</packaging>
-    <version>3.0.0.Beta1</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>Seam JMS Rest Publishing Example</name>
     <repositories>
         <repository>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.jboss.seam.jms</groupId>
             <artifactId>seam-jms-impl</artifactId>
-            <version>3.0.0.Beta1</version>
+            <version>3.0.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <artifactId>slf4j-api</artifactId>
